# cd15827-Claude-AI-Engineer-Bounded-Autonomy-Guardrails

./: .gitignore  README.md
Build a Hub-and-Spoke Multi-Agent System/01-scoped-subagents/solution/: README.md
Build a Hub-and-Spoke Multi-Agent System/01-scoped-subagents/solution/manufacturing_qc/: coordinator.py  subagents.py
Build a Hub-and-Spoke Multi-Agent System/01-scoped-subagents/starter/: README.md
Build a Hub-and-Spoke Multi-Agent System/02-parallel-spawn/solution/: README.md
Build a Hub-and-Spoke Multi-Agent System/02-parallel-spawn/starter/: README.md
Build a Hub-and-Spoke Multi-Agent System/03-structured-handoff/solution/: README.md  pyproject.toml
Build a Hub-and-Spoke Multi-Agent System/03-structured-handoff/solution/data/: seed_components.py
Build a Hub-and-Spoke Multi-Agent System/03-structured-handoff/solution/manufacturing_qc/: coordinator.py  models.py  runner.py
Build a Hub-and-Spoke Multi-Agent System/03-structured-handoff/solution/tests/: test_structured_handoff.py
Build a Hub-and-Spoke Multi-Agent System/03-structured-handoff/starter/: README.md
Build a Hub-and-Spoke Multi-Agent System/04-refinement-loop/solution/: README.md
Build a Hub-and-Spoke Multi-Agent System/04-refinement-loop/starter/: README.md
Enforce Agent Compliance with Deterministic Hooks/01-kyc-gate/solution/: README.md
Enforce Agent Compliance with Deterministic Hooks/01-kyc-gate/starter/: README.md
Enforce Agent Compliance with Deterministic Hooks/02-normalization/solution/: README.md
Enforce Agent Compliance with Deterministic Hooks/02-normalization/starter/: README.md
Enforce Agent Compliance with Deterministic Hooks/03-interception-handoff/solution/: .gitignore  README.md
Enforce Agent Compliance with Deterministic Hooks/03-interception-handoff/starter/: README.md  pyproject.toml
Enforce Agent Compliance with Deterministic Hooks/03-interception-handoff/starter/tests/: test_comparison_and_cli.py  test_interception_handoff.py
Enforce Agent Compliance with Deterministic Hooks/03-interception-handoff/starter/transaction_agent/: __init__.py  comparison.py  hooks.py  models.py
(+66 files in other folders)
